[gd_scene load_steps=10 format=3 uid="uid://c6smssfk7gn2w"]

[ext_resource type="Theme" uid="uid://cyua45ur0ijqo" path="res://Assets/Main.theme" id="1_fhj3g"]
[ext_resource type="Script" path="res://Components/ItemListView/ItemListView.gd" id="2_xkuya"]
[ext_resource type="Texture2D" uid="uid://bbennjke0ioen" path="res://Assets/Icons/Add.svg" id="3_kvafp"]
[ext_resource type="Texture2D" uid="uid://c6x6e8xi6lupf" path="res://Assets/Icons/Checked.svg" id="4_21ueo"]
[ext_resource type="Texture2D" uid="uid://su38vnysxa1c" path="res://Assets/Icons/Unchecked.svg" id="5_eti65"]
[ext_resource type="Texture2D" uid="uid://b2nos4alwgqcg" path="res://Assets/Icons/Invert.svg" id="6_xwuqg"]
[ext_resource type="Texture2D" uid="uid://bi4ttx5uklwl7" path="res://Assets/Icons/Check.svg" id="7_g74a1"]
[ext_resource type="Texture2D" uid="uid://rqf8w11gk6ud" path="res://Assets/Icons/Edit.svg" id="8_y732o"]
[ext_resource type="Texture2D" uid="uid://dfrrs2dnvlvsu" path="res://Assets/Icons/Delete.svg" id="9_dwy31"]

[node name="ItemListView" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource("1_fhj3g")
script = ExtResource("2_xkuya")

[node name="ToolBarContainer" type="PanelContainer" parent="."]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="ToolBarContainer"]
layout_mode = 2

[node name="New" type="Button" parent="ToolBarContainer/HBoxContainer"]
layout_mode = 2
text = "New"
icon = ExtResource("3_kvafp")

[node name="VSeparator1" type="VSeparator" parent="ToolBarContainer/HBoxContainer"]
layout_mode = 2

[node name="SelectAll" type="Button" parent="ToolBarContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Select All"
text = "All"
icon = ExtResource("4_21ueo")

[node name="SelectNone" type="Button" parent="ToolBarContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Select None"
text = "None"
icon = ExtResource("5_eti65")

[node name="SelectInvert" type="Button" parent="ToolBarContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Select None"
text = "Invert"
icon = ExtResource("6_xwuqg")

[node name="TakeSelection" type="Button" parent="ToolBarContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Select None"
text = "Take"
icon = ExtResource("7_g74a1")

[node name="VSeparator2" type="VSeparator" parent="ToolBarContainer/HBoxContainer"]
layout_mode = 2

[node name="Edit" type="Button" parent="ToolBarContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Select None"
text = "Edit"
icon = ExtResource("8_y732o")

[node name="Delete" type="Button" parent="ToolBarContainer/HBoxContainer"]
layout_mode = 2
tooltip_text = "Select All"
text = "Delete"
icon = ExtResource("9_dwy31")

[node name="PanelContainer2" type="PanelContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="ScrollContainer" type="ScrollContainer" parent="PanelContainer2"]
layout_mode = 2

[node name="ItemContainer" type="VBoxContainer" parent="PanelContainer2/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[connection signal="pressed" from="ToolBarContainer/HBoxContainer/New" to="." method="_on_new_pressed"]
[connection signal="pressed" from="ToolBarContainer/HBoxContainer/SelectAll" to="." method="_on_select_all_pressed"]
[connection signal="pressed" from="ToolBarContainer/HBoxContainer/SelectNone" to="." method="_on_select_none_pressed"]
[connection signal="pressed" from="ToolBarContainer/HBoxContainer/SelectInvert" to="." method="_on_select_invert_pressed"]
[connection signal="pressed" from="ToolBarContainer/HBoxContainer/TakeSelection" to="." method="_on_take_selection_pressed"]
[connection signal="pressed" from="ToolBarContainer/HBoxContainer/Edit" to="." method="_on_edit_pressed"]
[connection signal="pressed" from="ToolBarContainer/HBoxContainer/Delete" to="." method="_on_delete_pressed"]
